# docs/swagger.yaml
@@ -1,4 +1,94 @@
 basePath: /api/v1
+definitions:
+  dto.CreateUserRequest:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 72
+        minLength: 8
+        type: string
+      username:
+        maxLength: 30
+        minLength: 3
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
+  dto.CreateUserResponse:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
+      username:
+        type: string
+    type: object
+  dto.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 72
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  dto.LoginResponse:
+    properties:
+      token:
+        type: string
+    type: object
+  dto.SetClaimsRequest:
+    properties:
+      claim_ids:
+        items:
+          type: integer
+        type: array
+      user_id:
+        type: integer
+    required:
+    - claim_ids
+    - user_id
+    type: object
+  dto.SetClaimsResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  httperrors.HTTPError:
+    properties:
+      code:
+        type: integer
+      title:
+        type: string
+      type:
+        type: string
+    type: object
+  httperrors.HTTPValidationError:
+    properties:
+      code:
+        type: integer
+      title:
+        type: string
+      type:
+        type: string
+      validationError:
+        $ref: '#/definitions/httperrors.ValidationErrors'
+    type: object
+  httperrors.ValidationErrors:
+    properties:
+      error:
+        type: string
+      in:
+        type: string
+      key:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -6,7 +96,7 @@ info:
   title: Knowstack API
   version: "1.0"
 paths:
-  /api/v1/health:
+  /health:
     get:
       consumes:
       - application/json
@@ -23,4 +113,106 @@ paths:
       summary: Check the liveness of the service
       tags:
       - API Health
+  /users/claims:
+    post:
+      consumes:
+      - application/json
+      description: Sets claims for a user
+      parameters:
+      - description: User to set claims for
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SetClaimsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.SetClaimsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperrors.HTTPValidationError'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/httperrors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httperrors.HTTPError'
+      summary: Set claims for a user
+      tags:
+      - API User
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      description: Logs in a user
+      parameters:
+      - description: User to login
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperrors.HTTPValidationError'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/httperrors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httperrors.HTTPError'
+      summary: Login a user
+      tags:
+      - API User
+  /users/register:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new user
+      parameters:
+      - description: User to create
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.CreateUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperrors.HTTPValidationError'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/httperrors.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httperrors.HTTPError'
+      summary: Create a new user
+      tags:
+      - API User
 swagger: "2.0"
